2002-10-16 Oliver Rauch <Oliver.Rauch@rauch-domain.de>

	* backend/umax.c, umax-scanner.c: added Power Look 2000
	  as supported device, build 38

2002-10-15  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/sane-plustek.man: Major update
	* doc/descriptions/plustek.desc: Added EPSON 1260 entry
	* backend/plustek.conf updated options
	* backend/plustek.c backend/plustek-devs.c backend/plustek-usb.c
	  backend/plustek-usbhw.c backend/plustek-pp.c
	  backend/plustek-usbmap.c backend/plustek-usbimg.c
	  backend/plustek-usbscan.c backend/plustek-usbshading.c
	  backend/plustek.h backend/plustek-share.h backend/plustek-usb.h
	  Bug fixes and workarounds

2002-10-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane.tex: Backend behaviour is undefined if sane_init
	  doesn't return SANE_STATUS_GOOD. Added SANE_STATUS_INVAL to
	  return codes for sane_start. Description of sane_set_io_mode is
	  more precise.
	* sanei/sanei_usb.c: Really check for bulk_out ep when writing.
	* TODO: Added microtek2 problem. Updated sane.tex and desc sections.
	  Added scanimage width/height problem. Added possible solution to po
	  file mess.
	* doc/Makefile.in doc/sane-config.man: Added man page for sane-config.
	* doc/.cvsignore: Added sane-config.1.

2002-10-15  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.conf: Added comment for USB-scanner

2002-10-14  Peter Fales <peter@fales-lorenz.net>

	* backend/dc240.h,backend/dc240.c: Use portable code for camera
	  structures that does not depend on gcc or little-endian byte order

2002-10-14  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h backend/snapscan.c backend/snapscan.conf
	  doc/descriptions/snapscan.desc: SnapScan backend 1.4.17 -
	  added ID string for SnapScan e10, added Mitsubishi Diamandview
	  648UT in desc file.

2002-10-11  Peter Fales <peter@fales-lorenz.net>

	* backend/dc240.h - Add message to #error as required by ANSI

2002-10-11  Henning Meier-Geinitz <henning@meier-geinitz.de>
