@@ -1,3 +1,11 @@
+2002-10-17  Gerhard Jaeger <gerhard@gjaeger.de>
+
+	* backend/plustek.c: removed internationalization stuff
+	* backend/plustek-usb.c: removed obsolete definitions
+	* backend/plustek-usbhw.c: fixed typos
+	* backend/plustek-usnshading.c: fixed bug that produces
+	  files > 700M in debug mode. Added some debug output.
+
 2002-10-16 Oliver Rauch <Oliver.Rauch@rauch-domain.de>
 
 	* backend/umax.c, umax-scanner.c: added Power Look 2000
